Time displayed properly

--- a/frontend/src/components/statics/css/note.css
+++ b/frontend/src/components/statics/css/note.css
@@ -1,250 +1,276 @@
 @import "../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
-  .note_root {
-    width: 100% !important;
-    height: 880px;
-    position: relative;
-    background: var(--white);
-    border-radius: 20px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-    flex-grow: 1;
-  }
-  .note_notePadTop {
-    width: 100%;
-    height: 80px;
-  }
-  .note_titleTextContainer {
-    margin: 0px;
-    height: 80px;
-    position: relative;
-  }
-  .note_titleText {
-    width: 95%;
-    position: relative;
-    font-weight: 600;
-    font-size: 1.5em;
-    cursor: text;
-    position: relative;
-    margin: 0px;
-    line-height: 3.3em;
-    margin-left: 40px;
-    outline: none;
-    border: 0;
-  }
-  .note_closeButtonContainer {
-    height: 80px;
-  }
-  .note_closeButton {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    cursor: pointer;
-    padding: 8px;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-  }
-  .note_notePadBot {
-    width: 100%;
-    height: 750px;
-    text-align: justify;
-    position: relative;
-  }
-  .note_contentTextContainer {
-    width: 90%;
-    height: 695px;
-    margin: 0px auto !important;
-    text-align: justify;
-    overflow: hidden;
-  }
-  .note_contentText {
-    position: relative;
-    font-size: 1.15em;
-    line-height: 1.8em;
-    border: 1px solid black;
-  }
-  .note_quillNotes {
-    border: 1px solid black;
-  }
-  .note_tagLabel {
-    margin: 0;
-    border: 1px solid black;
-  }
-  .note_TagCreatorContainer {
-    width: 90%;
-    height: 30px;
-    margin: 10px auto !important;
-  }
-  .note_tagIconContainer {
-    position: relative;
-    top: 2px;
-  }
-  .note_TagIcon {
-    width: 22px;
-    height: 22px;
-  }
-  .note_TagCreatorInside {
-    height: 30px;
-    position: relative;
-  }
-  .note_tagListContainer {
-    height: 30px;
-  }
-  .note_tag {
-    margin-left: 10px !important;
-  }
-  .note_tagPlusButton {
-    width: 20px;
-    height: 20px;
-    margin-left: 15px !important;
-    border-radius: 50%;
-    background-color: var(--white);
-  }
-  .note_tagPlusButton:hover {
-    color: var(--white);
-    background-color: var(--green4);
-  }
-  .note_tagErrorButton {
-    width: 20px;
-    height: 20px;
-    margin-left: 15px !important;
-    border-radius: 50%;
-    color: var(--white);
-    animation: shake 0.2s;
-    background-color: var(--red4);
-  }
-  @keyframes shake {
-    0% {
-      transform: translate(1px, 1px) rotate(0deg);
-    }
-    20% {
-      transform: translate(-1px, 0px) rotate(1deg);
-    }
-    40% {
-      transform: translate(1px, -1px) rotate(1deg);
-    }
-    60% {
-      transform: translate(-1px, 1px) rotate(0deg);
-    }
-    80% {
-      transform: translate(-1px, -1px) rotate(1deg);
-    }
-    100% {
-      transform: translate(1px, -1px) rotate(-1deg);
-    }
-  }
-  .note_tagAddInput {
-    width: 80px;
-    height: 28px;
-    position: relative;
-    margin-left: 12px;
-    text-indent: 10px;
-    background-color: var(--grey4);
-    outline: none;
-    border: 0px;
-  }
-  .note_saveButtonContainer {
-    position: absolute;
-    right: 20px;
-    bottom: 10px;
-  }
-  .note_saveButton {
-    bottom: 50px;
-    width: 20px;
-    height: 20px;
-    padding: 8px;
-    border-radius: 100%;
-    cursor: pointer;
-  }
-  .note_reactQuillContainer {
-    min-height: 680px;
-  }
-  .note_trashButtonContainer {
-    position: absolute;
-    right: 60px;
-    bottom: 10px;
-  }
-  .note_trashButton {
-    bottom: 60px;
-    width: 20px;
-    height: 20px;
-    padding: 8px;
-    border-radius: 50%;
-    cursor: pointer;
-  }
+	.note_root {
+		width: 100% !important;
+		height: 880px;
+		position: relative;
+		background: var(--white);
+		border-radius: 20px;
+		box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+		flex-grow: 1;
+	}
+	.note_notePadTop {
+		width: 100%;
+		height: 80px;
+	}
+	.note_titleTextContainer {
+		margin: 0px;
+		height: 80px;
+		position: relative;
+	}
+	.note_timeContainer {
+		position: absolute;
+		top: 0px;
+	}
+	.note_timeText {
+		padding: 0;
+		font-weight: 450;
+		font-size: 1em;
+		color: var(--secondaryTextColor);
+	}
+	.note_titleText {
+		width: 72%;
+		position: relative;
+		font-weight: 600;
+		font-size: 1.5em;
+		cursor: text;
+		position: relative;
+		margin: 0px;
+		line-height: 3.3em;
+		margin-left: 40px;
+		outline: none;
+		border: 0;
+	}
+	.note_closeButtonContainer {
+		height: 80px;
+	}
+	.note_closeButton {
+		width: 20px;
+		height: 20px;
+		border-radius: 50%;
+		cursor: pointer;
+		padding: 8px;
+		position: absolute;
+		top: 15px;
+		right: 15px;
+	}
+	.note_notePadBot {
+		width: 100%;
+		height: 750px;
+		text-align: justify;
+		position: relative;
+	}
+	.note_contentTextContainer {
+		width: 90%;
+		height: 695px;
+		margin: 0px auto !important;
+		text-align: justify;
+		overflow: hidden;
+	}
+	.note_contentText {
+		position: relative;
+		font-size: 1.15em;
+		line-height: 1.8em;
+		border: 1px solid black;
+	}
+	.note_quillNotes {
+		border: 1px solid black;
+	}
+	.note_tagLabel {
+		margin: 0;
+		border: 1px solid black;
+	}
+	.note_TagCreatorContainer {
+		width: 90%;
+		height: 30px;
+		margin: 10px auto !important;
+	}
+	.note_tagIconContainer {
+		position: relative;
+		top: 2px;
+	}
+	.note_TagIcon {
+		width: 22px;
+		height: 22px;
+	}
+	.note_TagCreatorInside {
+		height: 30px;
+		position: relative;
+	}
+	.note_tagListContainer {
+		height: 30px;
+	}
+	.note_tag {
+		margin-left: 10px !important;
+	}
+	.note_tagPlusButton {
+		width: 20px;
+		height: 20px;
+		margin-left: 15px !important;
+		border-radius: 50%;
+		background-color: var(--white);
+	}
+	.note_tagPlusButton:hover {
+		color: var(--white);
+		background-color: var(--green4);
+	}
+	.note_tagErrorButton {
+		width: 20px;
+		height: 20px;
+		margin-left: 15px !important;
+		border-radius: 50%;
+		color: var(--white);
+		animation: shake 0.2s;
+		background-color: var(--red4);
+	}
+	@keyframes shake {
+		0% {
+			transform: translate(1px, 1px) rotate(0deg);
+		}
+		20% {
+			transform: translate(-1px, 0px) rotate(1deg);
+		}
+		40% {
+			transform: translate(1px, -1px) rotate(1deg);
+		}
+		60% {
+			transform: translate(-1px, 1px) rotate(0deg);
+		}
+		80% {
+			transform: translate(-1px, -1px) rotate(1deg);
+		}
+		100% {
+			transform: translate(1px, -1px) rotate(-1deg);
+		}
+	}
+	.note_tagAddInput {
+		width: 80px;
+		height: 28px;
+		position: relative;
+		margin-left: 12px;
+		text-indent: 10px;
+		background-color: var(--grey4);
+		outline: none;
+		border: 0px;
+	}
+	.note_saveButtonContainer {
+		position: absolute;
+		right: 20px;
+		bottom: 10px;
+	}
+	.note_saveButton {
+		bottom: 50px;
+		width: 20px;
+		height: 20px;
+		padding: 8px;
+		border-radius: 100%;
+		cursor: pointer;
+	}
+	.note_reactQuillContainer {
+		min-height: 680px;
+	}
+	.note_trashButtonContainer {
+		position: absolute;
+		right: 60px;
+		bottom: 10px;
+	}
+	.note_trashButton {
+		bottom: 60px;
+		width: 20px;
+		height: 20px;
+		padding: 8px;
+		border-radius: 50%;
+		cursor: pointer;
+	}
 }
 
 @media only screen and (max-width: 1919px) {
-  .note_root {
-    width: 100% !important;
-    height: 92vh;
-    position: relative;
-    background: var(--white);
-    border-radius: 20px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-    flex-grow: 1;
-  }
-  .note_notePadTop {
-    width: 100%;
-    height: 60px;
-  }
-  .note_titleTextContainer {
-    position: relative;
-  }
-  .note_titleText {
-    width: 93%;
-    position: relative;
-    font-weight: bold;
-    font-size: 1.2em;
-    cursor: text;
-    position: relative;
-    margin: 0px;
-    margin-left: 5% !important;
-    outline: none;
-    border: 0;
-  }
-  .note_notePadBot {
-    width: 100%;
-    height: 70vh;
-    text-align: justify;
-    position: relative;
-    top: 25px;
-  }
-  .note_contentTextContainer {
-    width: 88%;
-    text-align: justify;
-    line-height: 1.85em;
-    position: relative;
-    left: 5%;
-  }
-  .note_contentText {
-    position: relative;
-    font-size: 1em;
-  }
-  .note_closeButtonContainer {
-    height: 60px;
-  }
-  .note_closeButton {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    padding: 8px;
-    cursor: pointer;
-    position: absolute;
-    top: 2%;
-    right: 1.5%;
-  }
-  .note_trashButtonContainer {
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
-  }
-  .note_trashButton {
-    width: 20px;
-    height: 20px;
-    padding: 8px;
-    border-radius: 50%;
-    color: var(--red4);
-    cursor: pointer;
-  }
+	.note_root {
+		width: 100% !important;
+		height: 92vh;
+		position: relative;
+		background: var(--white);
+		border-radius: 20px;
+		box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+		flex-grow: 1;
+	}
+	.note_notePadTop {
+		width: 100%;
+		height: 60px;
+	}
+	.note_titleTextContainer {
+		position: relative;
+		height: 100%;
+	}
+	.note_titleText {
+		width: 63%;
+		position: relative;
+		font-weight: bold;
+		font-size: 1.2em;
+		cursor: text;
+		position: relative;
+		margin: 0px;
+		margin-left: 2% !important;
+		outline: none;
+		border: 0;
+	}
+	.note_timeContainer {
+		height: 100%;
+		bottom: 10px;
+		position: absolute;
+		top: 0px;
+	}
+	.note_timeText {
+		padding: 0;
+		position: relative;
+		bottom: 10px;
+		right: 10px;
+		font-weight: 450;
+		font-size: 0.9em;
+		color: var(--secondaryTextColor);
+	}
+	.note_notePadBot {
+		width: 100%;
+		height: 70vh;
+		text-align: justify;
+		position: relative;
+		top: 25px;
+	}
+	.note_contentTextContainer {
+		width: 88%;
+		text-align: justify;
+		line-height: 1.85em;
+		position: relative;
+		left: 5%;
+	}
+	.note_contentText {
+		position: relative;
+		font-size: 1em;
+	}
+	.note_closeButtonContainer {
+		height: 60px;
+	}
+	.note_closeButton {
+		width: 20px;
+		height: 20px;
+		border-radius: 50%;
+		padding: 8px;
+		cursor: pointer;
+		position: absolute;
+		top: 2%;
+		right: 1.5%;
+	}
+	.note_trashButtonContainer {
+		position: absolute;
+		right: 10px;
+		bottom: 10px;
+	}
+	.note_trashButton {
+		width: 20px;
+		height: 20px;
+		padding: 8px;
+		border-radius: 50%;
+		color: var(--red4);
+		cursor: pointer;
+	}
 }
