--- a/frontend/src/views/404/statics/css/404.css
+++ b/frontend/src/views/404/statics/css/404.css
@@ -46,16 +46,12 @@
 	}
 	.notfound_returnText{
 		color: var(--grey1) !important;
-	
 	}
 	.notfound_fancyButton{
-		padding:10px;
-		color: var(--red4);
-
+		color: var(--red4)
 	}
   }
-
-	@media only screen and (max-width: 1919px) {
+@media only screen and (max-width: 1919px) {
   .notFound_root {
     width: 100%;
     height: 100vh;
@@ -67,23 +63,25 @@
   .notfound_panelContainer{
       width: 70vh;
       height:100%;
-     
   }
   .notfound_404Container{
      
   }
   .notFound_404giant404{
+
 		display:block;
 		text-align: center;
-		font-size: 20rem;
+		font-size: 15rem;
 		font-weight:300;
+		padding-top:0px;
   }
 	.notFound_hmm{
 		display:block;
 		text-align: center;
 		font-weight: 300;
-		font-size:1.5rem;
+		font-size:1.2rem;
 		color: var(--grey1);
+		padding:0px
 	}
 	.notfound_404textMessage{
 		display:block;
@@ -92,7 +90,7 @@
 		color: var(--grey1);
 	}
 	.notFound_pageNotFound{
-		font-size:3rem;
+		font-size:2.5rem;
 		color:var(--red4);
 		display:block;
 		text-align: center;
