fixed few changes

--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -23,6 +23,7 @@
   --blue2: #389aea;
   --blue3: #55b0ff;
   --blue4: #33bcd4;
+  --blue5: #c5dcf7;
   --green: #42c7ca;
   --green2: #00c2a5;
   --green3: #01d78d;
