--- a/frontend/src/components/statics/css/sideNotes.css
+++ b/frontend/src/components/statics/css/sideNotes.css
@@ -1,110 +1,117 @@
 @import "../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
-	.sideNotes_root {
-		flex-grow: 1;
-		height: 220px;
-		width: 350px !important;
-		background: var(--white);
-		border-radius: 20px;
-		box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-		cursor: pointer;
-		color: var(--black);
-	}
-	.sideNotes_innerContainer {
-		overflow: hidden;
-		height: 83%;
-		position: relative;
-		top: 5%;
-	}
-	.sideNotes_titleTextContainer {
-		width: 85% !important;
-		max-height: 20%;
-		text-align: justify;
-		word-wrap: normal;
-	}
-	.sideNotes_titleText {
-		margin: 0;
-		padding: 0;
-		font-weight: bold;
-		font-size: 1.22em;
-		line-height: 1.5em;
-	}
-	.sideNotes_dateTimeContainer {
-		position: relative;
-		top: 10px;
-	}
-	.sideNotes_dateTime {
-		margin: 0 15px 0 0;
-		padding: 0;
-		font-weight: 450;
-		font-size: 1em;
-		color: var(--secondaryTextColor);
-	}
-	.sideNotes_contentTextContainer {
-		width: 85% !important;
-		position: relative;
-		margin-top: 5px !important;
-		word-wrap: normal;
-		text-align: justify;
-	}
+  .sideNotes_root {
+    flex-grow: 1;
+    width: 350px !important;
+    height: 220px;
+    background: var(--white);
+    margin: 0px auto;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    color: var(--black);
+  }
+  .sideNotes_innerContainer {
+    overflow: hidden;
+    width: 100%;
+    height: 180px;
+    margin-top: 10px !important;
+    position: relative;
+  }
+  .sideNotes_titleTextContainer {
+    width: 300px;
+    height: 32px;
+    text-align: justify;
+    white-space: nowrap;
+  }
+  .sideNotes_titleText {
+    margin: 0;
+    height: 30px;
+    font-weight: bold;
+    font-size: 1.22em;
+    line-height: 1.5em;
+    overflow: hidden;
+    word-wrap: normal;
+    text-overflow: ellipsis;
+  }
+  .sideNotes_dateTimeContainer {
+    position: relative;
+  }
+  .sideNotes_dateTime {
+    margin: 0px 15px 0 0;
+    padding: 0;
+    font-weight: 450;
+    font-size: 1em;
+    color: var(--secondaryTextColor);
+  }
+  .sideNotes_contentTextContainer {
+    width: 300px;
+    height: 138px;
+    position: relative;
+    margin-top: 5px !important;
+    text-align: justify;
+  }
 
-	.sideNotes_contentText {
-		margin: 0;
-		padding: 0;
-		line-height: 1.6em;
-	}
+  .sideNotes_contentText {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    word-wrap: normal;
+    text-overflow: ellipsis;
+    line-height: 1.8em;
+  }
 }
 
 @media only screen and (max-width: 1919px) {
-	.sideNotes_root {
-		flex-grow: 1;
-		height: 220px;
-		background: var(--white);
-		border-radius: 20px;
-		box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-		cursor: pointer;
-		color: var(--black);
-	}
-	.sideNotes_innerContainer {
-		overflow: hidden;
-		height: 80%;
-		position: relative;
-		top: 5%;
-	}
-	.sideNotes_titleTextContainer {
-		width: 85% !important;
-		max-height: 20%;
-	}
-	.sideNotes_titleText {
-		margin: 0;
-		padding: 0;
-		font-weight: bold;
-		font-size: 1.1em;
-		line-height: 1.35em;
-	}
-	.sideNotes_dateTimeContainer {
-		position: relative;
-		top: 15px;
-		right: 10px;
-	}
-	.sideNotes_dateTime {
-		margin: 0;
-		padding: 0;
-		font-weight: 550;
-		font-size: 0.85em;
-		color: var(--secondaryTextColor);
-	}
-	.sideNotes_contentTextContainer {
-		width: 85% !important;
-		margin-top: 5px !important;
-		word-wrap: normal;
-		text-align: justify;
-	}
+  .sideNotes_root {
+    flex-grow: 1;
+    height: 220px;
+    background: var(--white);
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    color: var(--black);
+  }
+  .sideNotes_innerContainer {
+    overflow: hidden;
+    height: 80%;
+    position: relative;
+    top: 5%;
+  }
+  .sideNotes_titleTextContainer {
+    width: 85% !important;
+    max-height: 20%;
+  }
+  .sideNotes_titleText {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    font-size: 1.1em;
+    line-height: 1.35em;
+  }
+  .sideNotes_dateTimeContainer {
+    position: relative;
+    top: 15px;
+    right: 10px;
+  }
+  .sideNotes_dateTime {
+    margin: 0;
+    padding: 0;
+    font-weight: 550;
+    font-size: 0.85em;
+    color: var(--secondaryTextColor);
+  }
+  .sideNotes_contentTextContainer {
+    width: 85% !important;
+    margin-top: 5px !important;
+    word-wrap: normal;
+    text-align: justify;
+  }
 
-	.sideNotes_contentText {
-		margin: 0;
-		padding: 0;
-		line-height: 1.6em;
-		font-size: 1em;
-	}
+  .sideNotes_contentText {
+    margin: 0;
+    padding: 0;
+    line-height: 1.6em;
+    font-size: 1em;
+  }
 }
