--- a/frontend/src/components/statics/css/adminBoxSmall.css
+++ b/frontend/src/components/statics/css/adminBoxSmall.css
@@ -6,7 +6,7 @@
   }
   .adminBoxSmall_container {
     width: 550px;
-    height: 20vh;
+    height: 160px;
     background: var(--white);
     border-radius: 20px;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
@@ -46,7 +46,7 @@
   }
   .adminBoxSmall_row2_bot {
     position: relative;
-    top:70px;
+    top: 70px;
     text-align: right;
   }
   .adminBoxSmall_row2_bot_text {
