--- a/frontend/src/views/QuizCreator/statics/css/quizCreator.css
+++ b/frontend/src/views/QuizCreator/statics/css/quizCreator.css
@@ -71,23 +71,10 @@
 .quizCreator_questionTitle{
     position: relative;
     top:-30px;
-    outline: none;
-    border: none;
-    width: 100%;
-    height: 50px;
-    border-bottom: 2px solid var(--grey2);
-    font-size: 1em;
-    background: transparent;
 }
 
 .quizCreator_option{
-    outline: none;
-    border: none;
-    width: 20vw;
-    height: 50px;
-    border-bottom: 2px solid var(--grey2);
-    font-size: 1em;
-    background: transparent;
+    
 }
 .quizCreator_addOptions{
     width: 160px;
@@ -107,7 +94,7 @@
 
 .lol{
 }
-.quizCreator_titleField{
+.quizCreator_titleField,.quizCreator_descriptionField,.quizCreator_option,.quizCreator_questionTitle{
     outline: none;
     border: none;
     width: 100%;
@@ -125,13 +112,7 @@
 }
 
 .quizCreator_descriptionField{
-    outline: none;
-    border: none;
-    width: 100%;
-    height: 50px;
-    border-bottom: 2px solid var(--grey2);
-    font-size: 1em;
-    background: transparent;
+
 }
 
 .quizCreator_randomText{
@@ -164,6 +145,7 @@
     cursor:pointer;
     scroll-snap-type: y mandatory;
     border:none;
+    
 
 }
 .quizCreator_submitButton{
