--- a/frontend/src/views/QuizCreator/statics/css/quizCreator.css
+++ b/frontend/src/views/QuizCreator/statics/css/quizCreator.css
@@ -32,15 +32,18 @@
 
 }
 .quizCreator_fileuploadInner2{
-    
-
 }
 .quizCreator_imageContainerOuter{
     align-items: center;
+}
+.quizCreator_fileupload{
+    background:transparent;
+    border:none;
+    cursor:pointer;
 
-    
 }
 .quizCreator_imageContainer{
+    
 
 }
 .quizCreator_uploadButton{
@@ -48,24 +51,26 @@
     
 }
 .quizCreator_removeContainer{
-    height:100%;
+    /* height:100%;
     padding:0px;
     width:50%;
-    margin:0px auto;
+    margin:0px auto; */
 }
 .quizCreator_remove{
     float:right;
-    width: 100px;
+    /* width: 100px; */
     height: 25px;
     background:transparent;
     border:none;
     color: var(--white);
     border:none;
     font-size: 1.1em;
+    
     cursor:pointer;
 }
 .quizCreator_imageCntainer{
-    display:inline-block;
+    position:relative;
+    
 }
 .quizCreator_titleText{
     position:relative;
@@ -157,7 +162,6 @@
 
 .quizCreator_randomLabel{
     
-   
 }
 .quizCreator_questionRemovecontainer{
     
