--- a/frontend/src/views/Admin/statics/css/commonView.css
+++ b/frontend/src/views/Admin/statics/css/commonView.css
@@ -256,6 +256,64 @@
     border-radius: 12px;
     font-size: 1.1em;
   }
+
+  /*Admin Student*/
+  .adminStudent_popUpContainer {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    background: rgba(15, 15, 15, 0.5);
+  }
+  .adminStudent_popUpBox {
+    width: 700px;
+    height: 560px;
+    position: relative;
+    margin-top: 220px !important;
+    margin-left: -350px !important;
+    border-radius: 15px;
+    background: var(--white);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .adminStudent_closeButtonContainer {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 20px;
+    right: 20px;
+  }
+  .adminStudent_closeButton {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+  .adminStudent_formBox {
+    width: 550px !important;
+    margin: 50px auto;
+  }
+  .adminStudent_submitButtonContainer {
+    margin: 20px auto !important;
+  }
+  .adminStudent_inputButton {
+    width: 100%;
+    height: 40px;
+    margin-top: 30px;
+    outline: none;
+    background: transparent;
+    border: 0px;
+    font-size: 1.1em;
+    border-bottom: 1px solid rgba(15, 15, 15, 0.3);
+  }
+  .adminStudent_submitButton {
+    width: 150px;
+    height: 45px;
+    background-color: var(--red4);
+    color: var(--white);
+    border-radius: 12px;
+    font-size: 1.1em;
+  }
 }
 
 @media only screen and (max-width: 1919px) {
