--- a/frontend/src/components/statics/css/button.css
+++ b/frontend/src/components/statics/css/button.css
@@ -7,5 +7,8 @@
   height: 100%;
 }
 
-@media only screen and (max-width: 1919px) {
+@media only screen and (min-width: 1366px) {
+}
+
+@media only screen and (min-width: 1920px) {
 }
