--- a/frontend/src/components/statics/css/courseBox.css
+++ b/frontend/src/components/statics/css/courseBox.css
@@ -1,75 +1,6 @@
 @import "../../../utils/colors.css";
-@media only screen and (min-width: 1920px) {
-  .courseBox_root {
-    border-radius: 25px;
-    min-height: 500px;
-    max-height: 630px;
-    position: relative;
-    margin: 0px auto;
-    background: var(--secondary);
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
-  }
-  .courseBox_courseTextTitle {
-    margin: 0px;
-    padding: 0px;
-    font-size: 2em;
-    height: 2em;
-    font-weight: bold;
-    position: relative;
-    top: 15px;
-    left: 30px;
-  }
-  .courseBox_courseDetailBoxContainer {
-    width: 100%;
-    height: 10%;
-    position: relative;
-  }
-  .courseBox_courseDetailBox {
-    height: 3.4vw;
-    padding: 2px;
-  }
-  .courseBox_courseTextCode {
-    width: 85%;
-    font-size: 1.4em;
-    font-weight: bold;
-    position: relative;
-    top: 10px;
-    left: 30px;
-    line-height: 0.95em;
-    list-style-type: none;
-    color: var(--primaryTextColor);
-  }
-  .courseBox_courseTextCodeSelected {
-    width: 85%;
-    font-size: 1.4em;
-    font-weight: bold;
-    position: relative;
-    top: 10px;
-    left: 30px;
-    line-height: 0.95em;
-    list-style-type: none;
-    color: var(--red4);
-  }
-  .courseBox_courseTextName {
-    font-size: 0.6em;
-    font-weight: 600;
-    position: relative;
-    list-style-type: none;
-    color: var(--secondaryTextColor);
-  }
-  .courseBox_courseTextCredit {
-    font-size: 0.8em;
-    font-weight: 400;
-    position: absolute;
-    top: 15px;
-    right: 10px;
-    list-style-type: none;
-    color: var(--secondaryTextColor);
-  }
-}
 
-@media only screen and (max-width: 1919px) {
+@media only screen and (min-width: 1366px) {
   .courseBox_root {
     min-height: 300px;
     border-radius: 25px;
@@ -80,32 +11,26 @@
   }
   .courseBox_courseTextTitle {
     margin: 0px;
-    padding: 0px;
     font-size: 1.5em;
     height: 2em;
     font-weight: bold;
     position: relative;
     margin-top: 10px;
     top: 10px;
-    left: 30px;
+    text-indent: 30px;
     margin-bottom: 20px;
   }
   .courseBox_courseDetailBoxContainer {
     width: 100%;
-    height: 10%;
     position: relative;
   }
   .courseBox_courseDetailBox {
-    height: 3.4vw;
-    margin-bottom: 10px;
   }
   .courseBox_courseTextCode {
-    width: 85%;
+    text-indent: 30px;
     font-size: 1.2em;
     font-weight: bold;
     position: relative;
-    left: 30px;
-    line-height: 0.95em;
     list-style-type: none;
   }
   .courseBox_courseTextCodeSelected {
@@ -113,8 +38,6 @@
     font-size: 1.2em;
     font-weight: bold;
     position: relative;
-    left: 30px;
-    line-height: 0.95em;
     list-style-type: none;
     color: var(--red4);
   }
@@ -126,12 +49,32 @@
     color: var(--grey1);
   }
   .courseBox_courseTextCredit {
-    font-size: 0.8em;
+    font-size: 0.7em;
     font-weight: 400;
     position: absolute;
     top: 0px;
-    right: 0px;
+    right: 20px;
     list-style-type: none;
     color: var(--grey1);
+  }
+}
+@media only screen and (min-width: 1920px) {
+  .courseBox_root {
+    min-height: 500px;
+  }
+  .courseBox_courseTextTitle {
+    font-size: 2em;
+    height: 2.5em;
+    text-indent: 40px;
+  }
+  .courseBox_courseTextCode {
+    text-indent: 40px;
+    font-size: 1.4em;
+  }
+  .courseBox_courseTextCodeSelected {
+    font-size: 1.4em;
+  }
+  .courseBox_courseTextCredit {
+    right: 30px;
   }
 }
