--- a/frontend/src/components/statics/css/profileBox.css
+++ b/frontend/src/components/statics/css/profileBox.css
@@ -1,65 +1,6 @@
 @import "../../../utils/colors.css";
-@media only screen and (min-width: 1920px) {
-  .profileBox_root {
-    flex-grow: 1;
-    height: 200px;
-    max-height: 200px;
-    border-radius: 25px;
-    background: var(--secondary);
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-    margin: 0px auto;
-  }
-  .profileBox_image {
-    border-radius: 50%;
-  }
-  .profileBox_imageSide {
-    height: 100%;
-    position: relative;
-  }
-  .profileBox_textBoxTop {
-    width: 100%;
-    margin-top: 10px;
-  }
-  .profileBox_textSide {
-    height: 100%;
-    position: relative;
-  }
-  .profileBox_profileImage {
-    width: 80%;
-    position: relative;
-    margin: 20px auto;
-  }
-  .profileBox_profileText {
-    font-size: 1.3em;
-    font-weight: bold;
-  }
-  .profileBox_textBox1 {
-    width: 80%;
-    position: relative;
-  }
-  .profileBox_textBox3 {
-    width: 85%;
-    position: absolute;
-    bottom: 0px;
-  }
-  .profileBox_departmentText {
-    font-weight: 400;
-    font-size: 1.2em;
-    color: var(--red4);
-  }
-  .profileBox_buttonContainer {
-    width: 20%;
-    margin-top: 10px !important;
-  }
-  .profileBox_profileButton {
-    width: 40px;
-    height: 40px;
-    background-color: var(--yellow2);
-    border-radius: 50%;
-  }
-}
 
-@media only screen and (max-width: 1919px) {
+@media only screen and (min-width: 1366px) {
   .profileBox_root {
     flex-grow: 1;
     margin: 0px auto;
@@ -86,15 +27,23 @@
   }
   .profileBox_textBoxTop {
     width: 100%;
+    height: 82px;
   }
   .profileBox_textBox1 {
     width: 72%;
+    margin-top: 10px;
     position: relative;
-    margin-top: 12%;
+  }
+  .profileBox_textBox1 p {
+    width: 110px;
+    height: 70px;
+    margin: 0;
+    word-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .profileBox_profileText {
-    width: 100%;
-    font-size: 0.95em;
+    font-size: 0.88em;
     font-weight: 700;
     position: relative;
     left: 2%;
@@ -102,24 +51,51 @@
   .profileBox_textBox3 {
     width: 95%;
     position: absolute;
-    left: 2%;
-    bottom: 0px;
+    right: 0px;
+    bottom: 10px;
   }
   .profileBox_departmentText {
+    margin: 0;
     font-weight: 380;
-    font-size: 0.95em;
+    font-size: 0.8em;
     color: var(--red4);
     position: relative;
-    left: 2%;
   }
   .profileBox_buttonContainer {
-    width: 20%;
     position: absolute;
-    margin-top: 3%;
-    right: 0;
+    top: 10px;
+    right: 10px;
   }
   .profileBox_profileButtonIcon {
     width: 30px;
     height: 30px;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .profileBox_root {
+    height: 200px;
+  }
+  .profileBox_textBoxTop {
+    height: 120px;
+  }
+  .profileBox_textBox1 p {
+    width: 160px;
+    height: 95px;
+  }
+  .profileBox_textBox1 {
+    margin-top: 20px;
+  }
+  .profileBox_profileText {
+    font-size: 1.2em;
+  }
+  .profileBox_textBox3 {
+    bottom: 20px;
+  }
+  .profileBox_departmentText {
+    font-size: 0.95em;
+  }
+  .profileBox_buttonContainer {
+    right: 20px;
   }
 }
