--- a/frontend/src/components/statics/css/questions.css
+++ b/frontend/src/components/statics/css/questions.css
@@ -1,4 +1,8 @@
 @import "../../../utils/colors.css";
+
+@media only screen and (min-width: 1366px) {
+}
+
 @media only screen and (min-width: 1920px) {
   .questions_root {
     flex-grow: 1;
@@ -39,7 +43,4 @@
     color: var(--grey2);
     line-height: 1.7em;
   }
-}
-
-@media only screen and (max-width: 1919px) {
 }
