--- a/frontend/src/components/statics/css/sideBar.css
+++ b/frontend/src/components/statics/css/sideBar.css
@@ -1,5 +1,6 @@
 @import "../../../utils/colors.css";
-@media only screen and (min-width: 1920px) {
+
+@media only screen and (min-width: 1366px) {
   .sideBar_root {
     flex-grow: 1 !important;
   }
@@ -9,17 +10,13 @@
     width: 85% !important;
     margin: 20px auto !important;
   }
-  .sideBar_logoContainerSmall {
-    display: none;
-    width: 85% !important;
-    margin: 20px auto !important;
-  }
+
   .sideBar_horizontalLine {
-    width: 60px !important;
+    width: 70px !important;
     height: 1.5px !important;
     background-color: var(--grey2) !important;
     opacity: 0.4 !important;
-    margin: -10px auto !important;
+    margin: 0px auto !important;
   }
   .sideBar_iconContainer {
     margin: 40px auto !important;
@@ -27,48 +24,21 @@
   .sideBar_iconStyle {
     width: 100%;
     height: 100%;
+    cursor: pointer !important;
   }
   .sideBar_sidebarLink {
     width: 98% !important;
-    height: 50px;
     margin: 15px auto;
     text-decoration: none !important;
   }
-  .sideBar_iconStyle {
-    cursor: pointer !important;
-  }
 }
 
-@media only screen and (max-width: 1919px) {
-  .sideBar_root {
-    flex-grow: 1 !important;
-  }
-  .sideBar_sideBar {
-  }
-  .sideBar_logoContainerBig {
-    width: 85% !important;
-    margin: 20px auto !important;
-  }
+@media only screen and (min-width: 1920px) {
   .sideBar_horizontalLine {
-    width: 60px !important;
-    height: 1.5px !important;
-    background-color: var(--grey2) !important;
-    opacity: 0.4 !important;
+    width: 70px !important;
     margin: -10px auto !important;
   }
-  .sideBar_iconContainer {
-    margin: 40px auto !important;
-  }
-  .sideBar_iconStyle {
-    width: 100%;
-    height: 100%;
-  }
   .sideBar_sidebarLink {
-    width: 98% !important;
-    margin: 8% auto;
-    text-decoration: none !important;
-  }
-  .sideBar_iconStyle {
-    cursor: pointer !important;
+    margin: 25px auto;
   }
 }
