--- a/frontend/src/components/statics/css/smallCards.css
+++ b/frontend/src/components/statics/css/smallCards.css
@@ -1,101 +1,9 @@
 @import "../../../utils/colors.css";
-@media only screen and (min-width: 1920px) {
-  .smallCards_container {
-    width: 360px;
-    height: 220px;
-    border-radius: 20px;
-    background: var(--secondary);
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-  }
-  .smallCards_root {
-    flex-grow: 1;
-  }
 
-  .smallCards_row1 {
-    height: 220px;
-  }
-  .smallCards_image {
-    border-radius: 50%;
-  }
-
-  .smallCards_row_col_box {
-    height: 220px;
-    position: relative;
-  }
-
-  .smallCards_row2 {
-    position: relative;
-    height: 220px;
-  }
-
-  .smallCards_buttonContainer {
-    position: relative;
-    top: 20px;
-  }
-
-  .smallCards_row_col_1 {
-    position: relative;
-    top: -20px;
-  }
-
-  .smallCards_row_col_2 {
-    position: relative;
-  }
-
-  .smallCards_row_col_1_bold {
-    margin: 0px;
-    padding: 0px;
-    font-size: 1.7em;
-    font-weight: bold;
-    color: var(--primaryTextColor);
-  }
-
-  .smallCards_row_col_1_light {
-    margin: 0px;
-    padding: 0px;
-    font-size: 0.8em;
-    font-weight: 600;
-    color: var(--secondaryTextColor);
-  }
-
-  .smallCards_row_col_2_bold {
-    margin: 0px;
-    padding: 0px;
-    font-size: 1.1em;
-    font-weight: bold;
-    color: var(--primaryTextColor);
-  }
-
-  .smallCards_row_col_2_light {
-    margin: 0px;
-    padding: 0px;
-    font-size: 0.9em;
-    font-weight: 600;
-    color: var(--secondaryTextColor);
-  }
-
-  .smallCards_row2_bot {
-    position: absolute;
-    bottom: 0px;
-    text-align: right;
-  }
-
-  .smallCards_row2_bot_text {
-    font-size: 0.9em;
-    color: var(--blue);
-  }
-
-  .smallCards_timeText {
-    font-size: 1em;
-    font-weight: 400;
-    color: var(--primaryTextColor);
-  }
-}
-
-@media only screen and (max-width: 1919px) {
+@media only screen and (min-width: 1366px) {
   .smallCards_container {
     width: 100% !important;
-    height: calc(160px + 2vw);
+    height: 180px;
     border-radius: 20px;
     background: var(--secondary);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
@@ -105,17 +13,17 @@
   }
 
   .smallCards_row1 {
-    height: calc(160px + 2vw);
+    height: 180px;
   }
 
   .smallCards_row_col_box {
-    height: calc(160px + 2vw);
+    height: 180px;
     position: relative;
   }
 
   .smallCards_row2 {
     position: relative;
-    height: calc(160px + 2vw);
+    height: 180px;
   }
 
   .smallCards_buttonContainer {
@@ -130,13 +38,13 @@
 
   .smallCards_row_col_2 {
     position: absolute;
-    bottom: 8%;
+    bottom: 20px;
   }
 
   .smallCards_row_col_1_bold {
     margin: 0px;
     padding: 0px;
-    font-size: 1.7em;
+    font-size: 1.5em;
     font-weight: bold;
     color: var(--primaryTextColor);
   }
@@ -152,7 +60,7 @@
   .smallCards_row_col_2_bold {
     margin: 0px;
     padding: 0px;
-    font-size: 1.1em;
+    font-size: 1em;
     font-weight: bold;
     color: var(--primaryTextColor);
   }
@@ -160,25 +68,61 @@
   .smallCards_row_col_2_light {
     margin: 0px;
     padding: 0px;
-    font-size: 0.9em;
+    font-size: 0.8em;
     font-weight: 600;
     color: var(--secondaryTextColor);
   }
 
   .smallCards_row2_bot {
     position: absolute;
-    bottom: 0px;
+    bottom: 20px;
     text-align: right;
   }
 
   .smallCards_row2_bot_text {
-    font-size: 0.9em;
+    margin: 0;
+    font-size: 0.7em;
     color: var(--blue);
   }
 
   .smallCards_timeText {
+    margin: 0;
     font-size: 1em;
     font-weight: 400;
     color: var(--primaryTextColor);
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .smallCards_container {
+    height: 220px;
+  }
+  .smallCards_row1 {
+    height: 220px;
+  }
+
+  .smallCards_row_col_box {
+    height: 220px;
+  }
+
+  .smallCards_row2 {
+    position: relative;
+    height: 220px;
+  }
+
+  .smallCards_buttonContainer {
+    top: 20px;
+  }
+
+  .smallCards_row_col_2_bold {
+    font-size: 1.1em;
+  }
+
+  .smallCards_row_col_2_light {
+    font-size: 0.9em;
+  }
+
+  .smallCards_row2_bot_text {
+    font-size: 0.9em;
   }
 }
