--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,12 @@
 @import "./utils/colors.css";
-
+:root {
+  --base-font-size: 1em;
+  --base-line-height: 1.5;
+  --header-line-height: 1.25;
+}
 @font-face {
   font-family: "Segoe UI";
-  src: local("Segoe"), url(../src/assets/fonts/Segoe.ttf);
-  /* other formats include: 'woff2', 'truetype, 'opentype',
-                            'embedded-opentype', and 'svg' */
+  src: local("Segoe"), url(../src/assets/fonts/RedHatText-Regular.ttf);
 }
 * {
   -webkit-overflow-scrolling: touch;
@@ -13,10 +15,24 @@
 body {
   padding: 0;
   margin: 0;
+  background: var(--white);
   font-family: "Segoe UI";
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--primary);
+  font-size: var(--base-font-size);
+  line-height: var(--base-line-height);
   height: 100vh;
   overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+@media only screen and (min-width: 1366px) {
+  body {
+    font-size: var(calc(--base-font-size * 1.3));
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  body {
+    font-size: var(calc(--base-font-size * 1.4));
+  }
 }
